Source/WebKit/NetworkProcess/FileAPI/NetworkBlobRegistry.cpp
@@ -122,7 +122,6 @@ void NetworkBlobRegistry::unregisterBlobURL(NetworkConnectionToWebProcess* conne
 
     blobRegistry().unregisterBlobURL(url);
 
-    ASSERT(mapIterator->value.contains(url));
     mapIterator->value.remove(url);
 }
 
